# MedicalMotionProfiler

./: CMakeLists.txt  README.md
include/: MotionProfiler.h
src/: MotionProfiler.cpp  main.cpp
